/*
 * $Id: ChangeLog,v 1.5564 2007/05/25 08:39:58 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2007-05-18 12:12 UTC+0100 Patrick Mast <patrick/dot/mast/at/xharbour.com>
   * bin\bld.bat
     + Added if "%_HB_GT_LIB%" == "" set _HB_GT_LIB=gtwin for BCC

2007-05-25 10:25 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * source/rdd/dbcmd.c
  * source/rdd/wafunc.c
    * reenabled by default strict clipper compatible behavior for
      code select(), dbSelectArea() and alias allocating
    synced with harbour

  * source/rdd/dbf1.c
    + added DBI_ISENCRYPTED for tables encrypted by SIX3
    synced with harbour

  * source/rdd/bmdbfcdx/bmdbfcdx1.c
    * some syntax corrections.

2007-05-25 09:15 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/vm/eval.c
    * Removed unused variable pSelf in function HB_FUNC( HB_EXEC )
    * Removed unused initialization of iParams in function HB_FUNC( HB_EXEC )

2007-05-24 23:39 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/compiler/genc.c
    * Removed unused variable iLen in function hb_compGenCCheckInLineStatic()

2007-05-24 23:04 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/compiler/harbour.c
    * Removed two redundant assignments in function hb_compCompile()

2007-05-24 16:05 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/fm.c
  * source/compiler/harbour.c
    * Compiler warnings
    
2007-05-24 13:00 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/pcre/config.h
    * Disable warning guarded by defined( _MSC_VER )

 /* Please add equivalent for your C compiler */

2007-05-24 18:23 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * source/rdd/bmdbfcdx/bmdbfcdx1.c
    * removed unnecesary code